# RT-DLM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile.train  Makefile  README.md  agi_config.py  agi_inference.py  audio_collection.py  config.py  data_collection.py  data_utils.py  docker-compose.yml  image_collection.py  inference.py  install_dependencies.py  lambda-env.sh  model.py  model_module.py  pyproject.toml  requirements.txt  rtdlm.py  rtdlm_agi_complete.py  setup-ec2.sh  setup-env.sh  system_demo.py  system_validator.py  test_runner.py  train.py  train_agi.py  train_config.py  train_test.py  train_tokenizer.py  video_collection.py
.github/workflows/: docker-build.yml  lint.yml  test.yml
TMS_block/: hyper_param_tune.py  infer_tms.py  memory_bank.py  model_tms.py  train_tms.py  validate_tms.py
TMS_block/security/: __init__.py
advanced_learning/: __init__.py  advanced_algorithms.py
advanced_understanding/: __init__.py  comprehension_modules.py
agi_capabilities/: integrated_agi_system.py  real_time_learning.py  zero_shot_reasoning.py
apps/: __init__.py
apps/image_generation/: api.py  chat_ui.py  model_module.py  train.py
apps/text_summarization/: api.py  chat_ui.py  text_summary_module.py  train.py
config/: __init__.py  agi_attention_config.py  agi_config.py  image_config.py  model_parallel_config.py  retrieval_config.py  rlm_config.py  train_config.py
core/: __init__.py  benchmark_evaluation.py  checkpoint_manager.py  evaluation.py  gradient_accumulation.py  memory_profiler.py  model_parallel.py  reasoning.py  sampling.py  scalable_training.py
core/components/: __init__.py  graph_neurons.py
core/ethics/: __init__.py  reward_model.py
core/model/: __init__.py  advanced_attention.py  agi_attention.py  memory_bank.py  model_module_self_attention.py  model_tms.py  model_transformer_module.py  sparse_moe.py
core/quantum/: __init__.py  extended_quantum_sim.py  quantum_agi_core.py  quantum_readiness.py  tensor_network.py
core/rlm/: __init__.py  context_store.py  context_tools.py  recursive_manager.py  rlm_core.py  tool_selector.py
core/training/: __init__.py  evaluation.py
core/utils/: __init__.py  decorators.py
data/: dataset.txt  train_data.txt  validation_data.txt  vocab.json
data/pipeline/: __init__.py  config.py  dataloader.py  extraction.py  ingestion.py  pipeline.py  preprocessing.py  sharding.py
data/processing/: __init__.py  data_collection.py  data_processor.py  data_utils.py
data_processing/: __init__.py  advanced_data_processor.py  data_collection.py  data_processor.py  data_utils.py
docs/: ARCHITECTURE.md  DATA_PIPELINE.md  DEPLOYMENT.md  QUICKSTART.md  SAMPLING.md
ethics/: ethical_adaptation.py  feedback_collector.py  reward_model.py
external_integration/: web_integration.py
helm/rtdlm/: .helmignore  Chart.yaml  README.md  values.yaml
hybrid_architecture/: hybrid_integrator.py
image_generation/: api.py  chat_ui.py  config.py  model_module.py  train.py  trained_image_model.pkl
logLevel/: logLevel.py
model/: __init__.py  memory_bank.py  model_module_self_attention.py  model_tms.py  model_transformer_module.py
model/security/: __init__.py  encryption.py  hashing.py  pii_detector.py  sanitizer.py
modules/: __init__.py
modules/capabilities/: integrated_agi_system.py
modules/hybrid_architecture/: hybrid_integrator.py
modules/integrations/: __init__.py  web_integration.py
modules/multimodal/: fusion_module.py
modules/retrieval/: __init__.py  augmented_attention.py  document_ingester.py  hybrid_retriever.py  training_integration.py
modules/tokenization/: multimodal_tokenizer.py
moe_block/: sparse_moe.py  train_sparse_moe.py
monitoring/: alerts.yml  prometheus.yml  prometheus_exporter.py
multimodal/: fusion_module.py  hybrid_audio_module.py  hybrid_video_module.py
quantum/: quantum_readiness.py
reasoning/: advanced_reasoning.py  reasoning.py
scripts/: export_to_onnx.py  lambda-env.sh  quantize_model.py  setup-env.sh  validate_model.py
self_attention/: model_module_self_attention.py  train_self_attention.py
src/: __init__.py  rtdlm.py  train.py
src/config/: __init__.py  agi_attention_config.py  agi_config.py  compute_controller_config.py  retrieval_config.py  tensor_network_config.py
src/core/: __init__.py  benchmark_evaluation.py  checkpoint_manager.py  evaluation.py  gradient_accumulation.py  memory_profiler.py  model_parallel.py  reasoning.py  sampling.py  scalable_training.py  training_utils.py
src/tests/: conftest.py  system_validator.py  test_advanced_algorithms_module.py  test_advanced_attention.py  test_agi_attention.py  test_agi_complete.py  test_agi_system.py  test_audio_emotion.py  test_augmented_attention.py  test_creative.py  (+49 more)
test_data/: sample.py
test_example/: test_attention.py  test_embedding.py  test_moe.py  test_transformer_block.py
tests/: conftest.py  run_tests.py  system_validator.py  test_advanced_attention.py  test_agi_attention.py  test_agi_complete.py  test_agi_system.py  test_audio_emotion.py  test_benchmark_evaluation.py  test_comprehension_modules.py  test_config.py  test_consciousness.py  test_creative.py  test_emotional.py  test_evaluation.py  test_extended_quantum.py  test_fairness.py  test_framework.py  test_full_training_cycle.py  test_gradient_accumulation.py  test_graph_neurons.py  test_hybrid_fusion.py  test_integration.py  test_memory_persistence.py  test_memory_profiler.py  test_model.py  test_model_parallel.py  test_pipeline.py  test_quantum_optional.py  test_rag_integration.py  test_retrieval.py  test_reusable_components.py  test_runner.py  test_sampling.py  test_scientific.py  test_security.py  test_tensor_network.py  test_tokenizer.py  test_training.py  test_training_utils.py
text_summarization/: api.py  chat_ui.py  text_summary_module.py  train.py  trained_model.pkl
tokenization/: multimodal_tokenizer.py
transformer_block/: model_transformer_module.py  trainConfig.py  train_transformer.py
transformer_self_attention/: model.py  model_transformer_self_attention.py  train_transformer_self_attention.py
(+107 files in other folders)
